Updated train unified to match assigner and composer

--- a/train_unified_lstm.ipynb
+++ b/train_unified_lstm.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,8 +69,9 @@
     "    # embed_dim: dimension of message embedding\n",
     "    # num_instruments: number of instrument labels\n",
     "    # hidden_size: size of hidden LSTM state\n",
+    "    # heads: number of attention heads\n",
     "    # recurrent_layers: the number of layers in the lstm\n",
-    "    def __init__(self, message_dim, embed_dim, num_instruments, hidden_size, recurrent_layers=3):\n",
+    "    def __init__(self, message_dim, embed_dim, num_instruments, hidden_size, heads, recurrent_layers=3):\n",
     "        super(EnsembleLSTM, self).__init__()\n",
     "        \n",
     "        self.embed_dim = embed_dim\n",
@@ -87,10 +88,10 @@
     "        # The decoding is passed through a linear layer to get the logits for the next message        \n",
     "        self.message_logits = torch.nn.Linear(hidden_size, message_dim)\n",
     "        \n",
-    "        # The decoding is passed through a different linear layer to get a query for\n",
-    "        # instrument-wise attention, which predicts which channel should generate\n",
-    "        # this message\n",
+    "        # The decoding becomes a query for attention across the instruments, which is used to\n",
+    "        # predict the next instrument\n",
     "        self.inst_query = torch.nn.Linear(hidden_size, embed_dim)\n",
+    "        self.inst_attention = torch.nn.MultiheadAttention(embed_dim, heads)\n",
     "        \n",
     "        # Indicates which channel is associated with each instrument\n",
     "        self.position_encoding = PositionalEncoding(embed_dim)\n",
@@ -105,14 +106,15 @@
     "    # mask: an LxB tensor, containing True in any locations where history contains\n",
     "    # padding\n",
     "    # instruments: a CxB tensor indicating the instrument number for each channel, where\n",
-    "    # C is the maximum number of channels in the batch. This should be END-PADDED along dimension 0\n",
+    "    # N is the maximum number of channels in the batch. This should be END-PADDED along dimension 0\n",
+    "    # inst_mask: contains False where an instrument exists and True elsewhere\n",
     "    # RETURN: two tensors. The first is LxBxD, representing the distribution for the next message at each time\n",
     "    # step (need to take the softmax to get actual probabilities). The second is LxBxC, representing the\n",
     "    # distribution for the next channel at each time step (need to take the softmax to get actual probabilities)\n",
-    "    def forward(self, history, mask, instruments):\n",
+    "    def forward(self, history, mask, instruments, inst_mask):\n",
     "        L = history.shape[0] # longest length\n",
     "        B = history.shape[1] # batch size\n",
-    "        C = instruments.shape[0]\n",
+    "        N = instruments.shape[0]\n",
     "        assert(mask.shape == (L, B))\n",
     "        \n",
     "        # CxBxD\n",
@@ -136,15 +138,14 @@
     "        # LxBxD\n",
     "        message_dist = self.message_logits(decoding)\n",
     "        \n",
-    "        # CxLxBxD\n",
-    "        inst_queries = self.inst_query(decoding).unsqueeze(0).expand(C, -1, -1, -1)\n",
+    "        # channel_dist (BxLxN) contains the attention weights for each instrument.\n",
+    "        # We have L queries (the elements of decoding). Our keys and values\n",
+    "        # are the instrument embeddings\n",
+    "        att_out, channel_dist = self.inst_attention(self.inst_query(decoding), \\\n",
+    "                                                    inst_embed, inst_embed,\n",
+    "                                                    key_padding_mask = inst_mask.transpose(0, 1))\n",
     "        \n",
-    "        prods = inst_queries*inst_embed.unsqueeze(1).expand(-1, L, -1, -1)/self.embed_dim\n",
-    "        \n",
-    "        # Dot-product attention (LxBxC)\n",
-    "        channel_dist = torch.sum(prods, dim=3).permute(1, 2, 0)\n",
-    "        \n",
-    "        return message_dist, channel_dist\n",
+    "        return message_dist, channel_dist.transpose(0, 1)\n",
     "    \n",
     "    # forward: generates a probability distribution for the next MIDI message\n",
     "    # and the channel that should issue it, given the previous message and channel,\n",
@@ -179,19 +180,17 @@
     "        # 1x1xD\n",
     "        message_dist = self.message_logits(decoding)\n",
     "        \n",
-    "        # Cx1x1xD\n",
-    "        inst_queries = self.inst_query(decoding).unsqueeze(0).expand(C, -1, -1, -1)\n",
-    "        \n",
-    "        prods = inst_queries*inst_embed.unsqueeze(1)/self.embed_dim\n",
-    "        \n",
-    "        # Dot-product attention (1x1xC)\n",
-    "        channel_dist = torch.sum(prods, dim=3).permute(1, 2, 0)\n",
+    "        # channel_dist (1x1xC) contains the attention weights for each instrument.\n",
+    "        # We have 1 query (the decoding). Our keys and values\n",
+    "        # are the instrument embeddings\n",
+    "        att_out, channel_dist = self.inst_attention(self.inst_query(decoding), \\\n",
+    "                                                    inst_embed, inst_embed)\n",
     "        \n",
     "        message = torch.multinomial(torch.softmax(message_dist.flatten(), dim=0), 1)\n",
-    "        channel = torch.multinomial(torch.softmax(channel_dist.flatten(), dim=0), 1)\n",
+    "        channel = torch.multinomial(channel_dist.flatten(), 1)\n",
     "        \n",
     "        #message = torch.argmax(torch.softmax(message_dist.flatten(), dim=0))\n",
-    "        #channel = torch.argmax(torch.softmax(channel_dist.flatten(), dim=0))\n",
+    "        #channel = torch.argmax(channel_dist.flatten())\n",
     "        \n",
     "        ret = torch.cat((message.view(1, 1, 1), channel.view(1, 1, 1)), dim=2)\n",
     "        \n",
@@ -215,16 +214,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "embed_dim = 256\n",
     "hidden_size = 1024\n",
+    "heads = 4\n",
     "\n",
     "grad_clip = 10\n",
     "\n",
-    "model = EnsembleLSTM(message_dim, embed_dim, num_instruments, hidden_size)\n",
+    "model = EnsembleLSTM(message_dim, embed_dim, num_instruments, hidden_size, heads)\n",
     "for p in model.parameters():\n",
     "    p.register_hook(lambda grad: torch.clamp(grad, -grad_clip, grad_clip))\n",
     "    \n",
@@ -268,29 +268,29 @@
     "history = torch.tensor(recording[:nsamples], dtype=torch.long).view(-1, 1, 2)\n",
     "mask = torch.zeros((history.shape[0], history.shape[1]), dtype=torch.bool)\n",
     "instruments = torch.tensor([instrument_numbers.index(i) for i in instruments_np], dtype=torch.long).view(-1, 1)\n",
+    "inst_mask = torch.zeros(instruments.shape, dtype=torch.bool)\n",
     "\n",
     "num_channels = instruments.shape[0]\n",
     "\n",
     "batch_size = 1\n",
     "learning_rate = 0.001\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
-    "loss_fn = torch.nn.CrossEntropyLoss()\n",
+    "message_loss_fn = torch.nn.CrossEntropyLoss()\n",
+    "channel_loss_fn = torch.nn.NLLLoss(ignore_index=-1)\n",
     "epochs = 500\n",
     "train_losses = np.zeros(epochs)\n",
     "\n",
     "target_messages = history[1:, :, 0].flatten()\n",
     "target_channels = history[1:, :, 1].flatten()\n",
     "\n",
-    "# The network can predict whatever channel it wants for time shift events\n",
-    "time_shift_mask = target_channels >= 0\n",
-    "\n",
     "for epoch in range(epochs):\n",
     "    print('Starting epoch %d' %(epoch))\n",
     "    \n",
-    "    message_logits, channel_logits = model(history[:-1], mask[:-1], instruments)\n",
+    "    message_logits, channel_probs = model(history[:-1], mask[:-1], instruments, inst_mask)\n",
+    "    channel_log_probs = torch.log(channel_probs + 1e-10)\n",
     "    \n",
-    "    loss = loss_fn(message_logits.view(-1, message_dim), target_messages) + \\\n",
-    "           loss_fn(channel_logits.view(-1, num_channels)[time_shift_mask], target_channels[time_shift_mask])\n",
+    "    loss = message_loss_fn(message_logits.view(-1, message_dim), target_messages) + \\\n",
+    "           channel_loss_fn(channel_log_probs.view(-1, instruments.shape[0]), target_channels)\n",
     "                \n",
     "    optimizer.zero_grad()\n",
     "    loss.backward()\n",
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,31 +440,31 @@
     "# ARGUMENTS\n",
     "# batch: a list of dictionaries\n",
     "# RETURN: a sample with keys 'history', 'instruments', and 'mask'\n",
-    "# sample['history']: an LxBx2 tensor containing messages\n",
+    "# sample['history']: an LxBx2 tensor containing messages and their associated channels\n",
     "# sample['instruments']: a CxB tensor containing instrument numbers for each channel\n",
     "# sample['mask']: an LxB tensor containing False where a message is\n",
     "# valid, and True where it isn't (accounts for variable length sequences\n",
     "# and zero padding)\n",
-    "# sample['nchan']: a length B tensor containing the number of channels for each batch\n",
-    "# element (including the dummy time-shift channel)\n",
+    "# sample['inst_mask']: an NxB tensor containing False where an instrument exists and True\n",
+    "# otherwise\n",
     "def collate_fn(batch):\n",
     "    batch_size = len(batch)\n",
     "    \n",
-    "    # We size our tensors to accomodate the longest sequence and the largest number of channels\n",
-    "    max_channels = max([instance['instruments'].shape[0] for instance in batch])\n",
+    "    # We size our tensors to accomodate the longest sequence and the largest number of instruments\n",
+    "    max_inst = max([instance['instruments'].shape[0] for instance in batch])\n",
     "    longest_len = max([instance['history'].shape[0] for instance in batch])\n",
     "\n",
     "    sample = {'history': torch.zeros((longest_len, batch_size, 2), dtype=torch.long), \\\n",
-    "              'instruments': torch.zeros((max_channels, batch_size), dtype=torch.long), \\\n",
+    "              'instruments': torch.zeros((max_inst, batch_size), dtype=torch.long), \\\n",
     "              'mask': torch.ones((longest_len, batch_size), dtype=torch.bool), \\\n",
-    "              'nchan': torch.zeros(batch_size, dtype=torch.long)}\n",
+    "              'inst_mask': torch.ones((max_inst, batch_size), dtype=torch.bool)}\n",
     "\n",
     "    for b, instance in enumerate(batch):\n",
     "        instrument_idx = [instrument_numbers.index(i) for i in instance['instruments']]\n",
     "        \n",
     "        sample['instruments'][:len(instrument_idx), b] = torch.tensor(instrument_idx, dtype=torch.long)\n",
     "        \n",
-    "        sample['nchan'][b] = len(instrument_idx)\n",
+    "        sample['inst_mask'][:len(instrument_idx), b] = False\n",
     "        \n",
     "        seq_length = instance['history'].shape[0]\n",
     "        sample['history'][:seq_length, b] = torch.tensor(instance['history'], dtype=torch.long)\n",
@@ -482,64 +482,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# compute_loss: computes the loss for the model over the batch\n",
     "# ARGUMENTS\n",
     "# model: EnsembleLSTM model\n",
-    "# loss_fn: torch.nn.CrossEntropyLoss object\n",
+    "# message_loss_fn: torch.nn.CrossEntropyLoss object\n",
+    "# channel_loss_fn: torch.nn.NLLLoss object\n",
     "# batch: see collate_fn definition\n",
     "# RETURN: a scalar loss tensor\n",
-    "def compute_loss(model, loss_fn, batch):\n",
-    "    batch_size = batch['history'].shape[1]\n",
-    "    \n",
+    "def compute_loss(model, message_loss_fn, channel_loss_fn, batch):  \n",
     "    max_seq_length = batch['history'].shape[0]\n",
-    "        \n",
-    "    num_targets = max_seq_length - 1 # Messages start from t = 0, but we start generating at t = 1\n",
     "\n",
-    "    message_logits, channel_logits = model(batch['history'][:-1], batch['mask'][:-1], batch['instruments'])\n",
+    "    message_logits, channel_dist = model(batch['history'][:-1], batch['mask'][:-1], batch['instruments'], batch['inst_mask'])\n",
+    "    log_channel_dist = torch.log(channel_dist + 1e-10)\n",
     "\n",
     "    target_mask = torch.logical_not(batch['mask'][1:])\n",
     "\n",
-    "    num_valid_targets = target_mask.sum()\n",
+    "    message_loss = message_loss_fn(message_logits[target_mask], batch['history'][1:, :, 0][target_mask])\n",
+    "    channel_loss = channel_loss_fn(log_channel_dist[target_mask], batch['history'][1:, :, 1][target_mask])\n",
     "\n",
-    "    target_messages = batch['history'][1:, :, 0][target_mask]\n",
-    "\n",
-    "    message_loss = loss_fn(message_logits[target_mask], target_messages)/num_valid_targets\n",
-    "\n",
-    "    channel_losses = torch.zeros(batch_size)\n",
-    "\n",
-    "    for i in range(batch_size):\n",
-    "        channel_logits_i = channel_logits[:, i, :batch['nchan'][i]][target_mask[:, i]]\n",
-    "        target_channels = batch['history'][1:, i, 1][target_mask[:, i]]\n",
-    "        \n",
-    "        time_shift_mask = target_channels >= 0\n",
-    "        channel_losses[i] = loss_fn(channel_logits_i[time_shift_mask], target_channels[time_shift_mask])/num_valid_targets\n",
-    "\n",
-    "    return message_loss + channel_losses.sum()"
+    "    return message_loss + channel_loss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "embed_dim = 256\n",
     "hidden_size = 1024\n",
+    "heads = 4\n",
     "\n",
     "grad_clip = 10\n",
     "\n",
-    "model = EnsembleLSTM(message_dim, embed_dim, num_instruments, hidden_size)\n",
+    "model = EnsembleLSTM(message_dim, embed_dim, num_instruments, hidden_size, heads)\n",
     "for p in model.parameters():\n",
     "    p.register_hook(lambda grad: torch.clamp(grad, -grad_clip, grad_clip))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +551,8 @@
     "test_dataset = MIDIDataset('test_unified', chunk_size)\n",
     "test_dataloader = torch.utils.data.DataLoader(test_dataset, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
     "\n",
-    "loss_fn = torch.nn.CrossEntropyLoss()\n",
+    "message_loss_fn = torch.nn.CrossEntropyLoss()\n",
+    "channel_loss_fn = torch.nn.NLLLoss(ignore_index=-1)\n",
     "epochs = 20\n",
     "train_losses = np.zeros(epochs)\n",
     "test_losses = np.zeros(epochs)\n",
@@ -574,22 +562,26 @@
     "    model.train()\n",
     "    for b, batch in enumerate(train_dataloader):\n",
     "        print('Starting iteration %d' %(b))\n",
-    "        loss = compute_loss(model, loss_fn, batch)\n",
+    "        loss = compute_loss(model, message_loss_fn, channel_loss_fn, batch)\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
+    "        print(loss.data)\n",
+    "        for p in model.parameters():\n",
+    "            if p.grad is not None:\n",
+    "                print(p.grad.norm())\n",
     "        optimizer.step()\n",
-    "\n",
-    "    torch.save(model.state_dict(), 'trained_models_12_3/epoch' + str(epoch) + '.pth')\n",
+    "        \n",
+    "    torch.save(model.state_dict(), 'unified_transformer_models/epoch' + str(epoch) + '.pth')\n",
     "\n",
     "    print('Computing test loss')\n",
     "    model.eval()\n",
     "    for batch in test_dataloader:\n",
-    "        loss = compute_loss(model, loss_fn, batch)\n",
+    "        loss = compute_loss(model, message_loss_fn, channel_loss_fn, batch)\n",
     "        test_losses[epoch] += loss.data\n",
     "        \n",
     "    print('Computing train loss')\n",
     "    for batch in train_dataloader:\n",
-    "        loss = compute_loss(model, loss_fn, batch)\n",
+    "        loss = compute_loss(model, message_loss_fn, channel_loss_fn, batch)\n",
     "        train_losses[epoch] += loss.data\n",
     "    \n",
     "    train_losses[epoch] /= len(train_dataloader)\n",
