Fixed sampling bug, but training doesn't seem to work

--- a/lstm_baseline.ipynb
+++ b/lstm_baseline.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,19 +30,19 @@
     "    # root_dir: the directory to search\n",
     "    # chunk_size: we'll chunk the data into chunks of this size (or less)\n",
     "    def __init__(self, root_dir, chunk_size, transform=None):\n",
-    "        self.chunks = np.zeros((chunk_size, 0), dtype='long')\n",
-    "        self.masks = np.ones((chunk_size, 0), dtype='bool')\n",
+    "        self.chunks = torch.zeros((chunk_size, 0), dtype=torch.long)\n",
+    "        self.masks = torch.ones((chunk_size, 0), dtype=torch.bool)\n",
     "        \n",
     "        ch = 0\n",
     "        for f, file in enumerate(os.listdir(root_dir)):\n",
     "            data = np.load(root_dir + '/' + file)\n",
     "            nchunks = int(np.ceil(data.shape[0]/chunk_size))\n",
-    "            self.chunks = np.concatenate((self.chunks, np.zeros((chunk_size, nchunks), dtype='long')), axis=1)\n",
-    "            self.masks = np.concatenate((self.masks, np.zeros((chunk_size, nchunks), dtype='bool')), axis=1)\n",
+    "            self.chunks = torch.cat((self.chunks, torch.zeros((chunk_size, nchunks), dtype=torch.long)), axis=1)\n",
+    "            self.masks = torch.cat((self.masks, torch.zeros((chunk_size, nchunks), dtype=torch.bool)), axis=1)\n",
     "            for chunk_start in range(0, data.shape[0], chunk_size):\n",
     "                chunk_end = min(chunk_start + chunk_size, data.shape[0])\n",
     "                size = chunk_end - chunk_start\n",
-    "                self.chunks[:size, ch] = data[chunk_start:chunk_end]\n",
+    "                self.chunks[:size, ch] = torch.tensor(data[chunk_start:chunk_end])\n",
     "                self.masks[:size, ch] = False\n",
     "                ch += 1\n",
     "            \n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 415,
    "metadata": {
     "scrolled": true
    },
@@ -94,7 +94,7 @@
        "2526"
       ]
      },
-     "execution_count": 387,
+     "execution_count": 415,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "722"
       ]
      },
-     "execution_count": 388,
+     "execution_count": 416,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 419,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 420,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,31 +210,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting epoch 0\n",
-      "Starting iteration 0\n",
-      "Starting iteration 100\n",
-      "Starting iteration 200\n",
-      "Computing test loss\n",
-      "Computing train loss\n",
-      "Train loss: 4.650233, Test loss: 4.702074\n",
-      "Starting epoch 1\n",
-      "Starting iteration 0\n",
-      "Starting iteration 100\n",
-      "Starting iteration 200\n",
-      "Computing test loss\n",
-      "Computing train loss\n",
-      "Train loss: 4.647072, Test loss: 4.698816\n",
-      "Starting epoch 2\n",
-      "Starting iteration 0\n",
-      "Starting iteration 100\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_losses = [0 for epoch in range(epochs)]\n",
     "test_losses = [0 for epoch in range(epochs)]\n",
@@ -264,10 +240,7 @@
     "        \n",
     "    train_losses[epoch] /= len(train_dataloader)\n",
     "        \n",
-    "    print('Train loss: %f, Test loss: %f' %(train_losses[epoch], test_losses[epoch]))\n",
-    "    \n",
-    "# Save the trained model and the weights (this is gonna error out)\n",
-    "model.save_weights(checkpoint_prefix)"
+    "    print('Train loss: %f, Test loss: %f' %(train_losses[epoch], test_losses[epoch]))"
    ]
   },
   {
@@ -301,9 +274,9 @@
     "    hidden = None\n",
     "    gen = torch.tensor(primer).unsqueeze(1)\n",
     "    message = gen\n",
-    "    for i in gen_length:\n",
+    "    for i in range(gen_length):\n",
     "        logits, hidden = model(message, hidden)\n",
-    "        message = torch.multinomial(logits[-1].flatten(), 1).view(1, 1)\n",
+    "        message = torch.multinomial(torch.nn.functional.softmax(logits[-1].flatten(), dim=0), 1).view(1, 1)\n",
     "        gen = torch.cat((gen, message))\n",
     "        \n",
     "    return gen"
@@ -332,7 +305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('maestro_midi.npy', generated_music.detach().numpy())"
+    "np.save('maestro_midi.npy', generated_music.flatten().detach().numpy())"
    ]
   },
   {
