Don't throw out last event in preprocess

--- a/preprocess_maestro.ipynb
+++ b/preprocess_maestro.ipynb
@@ -204,7 +204,7 @@
     "        \n",
     "        for m in range(data.shape[0] - 1):\n",
     "            data_with_tshifts.append(data[m])\n",
-    "            if times[m] != times[m + 1]:\n",
+    "            if m != data.shape[0] - 1 and times[m] != times[m + 1]:\n",
     "                append_time_shift(data_with_tshifts, times[m + 1] - times[m])\n",
     "\n",
     "        data_with_tshifts = np.array(data_with_tshifts)\n",
