--- a/preprocess_unified.ipynb
+++ b/preprocess_unified.ipynb
@@ -206,10 +206,10 @@
     "        data_with_tshifts = []\n",
     "        channels_with_tshifts = []\n",
     "        \n",
-    "        for m in range(data.shape[0] - 1):\n",
+    "        for m in range(data.shape[0]):\n",
     "            data_with_tshifts.append(data[m])\n",
     "            channels_with_tshifts.append(channels[m])\n",
-    "            if times[m] != times[m + 1]:\n",
+    "            if m != data.shape[0] - 1 and times[m] != times[m + 1]:\n",
     "                append_time_shift(data_with_tshifts, times[m + 1] - times[m])\n",
     "                num_append = len(data_with_tshifts) - len(channels_with_tshifts)\n",
     "                \n",
