--- a/preprocess_maestro.ipynb
+++ b/preprocess_maestro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
     "        \n",
     "        data_with_tshifts = []\n",
     "        \n",
-    "        for m in range(data.shape[0] - 1):\n",
+    "        for m in range(data.shape[0]):\n",
     "            data_with_tshifts.append(data[m])\n",
     "            if m != data.shape[0] - 1 and times[m] != times[m + 1]:\n",
     "                append_time_shift(data_with_tshifts, times[m + 1] - times[m])\n",
