--- a/transformer_baseline.ipynb
+++ b/transformer_baseline.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 109,
    "metadata": {
     "scrolled": true
    },
@@ -92,18 +92,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "100\n",
-      "200\n"
+      "0\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "5743"
+       "2526"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -128,10 +126,10 @@
     {
      "data": {
       "text/plain": [
-       "1494"
+       "722"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,11 +247,27 @@
       "Starting iteration 0\n",
       "Starting iteration 100\n",
       "Starting iteration 200\n",
-      "Starting iteration 300\n",
-      "Starting iteration 400\n",
-      "Starting iteration 500\n",
       "Computing test loss\n",
-      "Computing train loss\n"
+      "Computing train loss\n",
+      "Train loss: 4.654969, Test loss: 4.697808\n",
+      "Starting epoch 1\n",
+      "Starting iteration 0\n",
+      "Starting iteration 100\n",
+      "Starting iteration 200\n",
+      "Computing test loss\n",
+      "Computing train loss\n",
+      "Train loss: 4.491338, Test loss: 4.546344\n",
+      "Starting epoch 2\n",
+      "Starting iteration 0\n",
+      "Starting iteration 100\n",
+      "Starting iteration 200\n",
+      "Computing test loss\n",
+      "Computing train loss\n",
+      "Train loss: 4.651902, Test loss: 4.717244\n",
+      "Starting epoch 3\n",
+      "Starting iteration 0\n",
+      "Starting iteration 100\n",
+      "Starting iteration 200\n"
      ]
     }
    ],
@@ -295,8 +309,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('maestro_lstm_checkpoints/train_losses.npy', np.array(train_losses))\n",
-    "np.save('maestro_lstm_checkpoints/test_losses.npy', np.array(test_losses))"
+    "np.save(checkpoint_dir + '/train_losses.npy', np.array(train_losses))\n",
+    "np.save(checkpoint_dir + '/test_losses.npy', np.array(test_losses))"
    ]
   },
   {
@@ -305,8 +319,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = BaselineLSTM(message_dim, embed_dim, hidden_size, recurrent_layers)\n",
-    "model.load_state_dict(torch.load('maestro_lstm_checkpoints/epoch' + str(epochs - 1)))"
+    "model = BaselineTransformer(message_dim, embed_dim, heads, attention_layers, ff_size)\n",
+    "model.load_state_dict(torch.load(checkpoint_dir + '/epoch' + str(epochs - 1)))"
    ]
   },
   {
