--- a/transformer_baseline.ipynb
+++ b/transformer_baseline.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -98,10 +98,10 @@
     {
      "data": {
       "text/plain": [
-       "2526"
+       "2172"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -126,10 +126,10 @@
     {
      "data": {
       "text/plain": [
-       "722"
+       "290"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,17 +315,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model = BaselineTransformer(message_dim, embed_dim, heads, attention_layers, ff_size)\n",
-    "model.load_state_dict(torch.load(checkpoint_dir + '/epoch' + str(epochs - 1)))"
+    "model.load_state_dict(torch.load(checkpoint_dir + '/epoch' + str(epochs - 1) + '.pth'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,30 +349,23 @@
     "        logits = model(gen, mask)\n",
     "        message = torch.multinomial(torch.nn.functional.softmax(logits[-1].flatten(), dim=0), 1).view(1, 1)\n",
     "        gen = torch.cat((gen, message))\n",
+    "        mask = torch.cat((mask, torch.zeros((1, 1), dtype=torch.bool)))\n",
     "        \n",
     "    return gen"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:11<00:00, 86.23it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "generated_music = generate_event(model, start_event=[16,60, 330, 188, 64, 330, 192, 67,330, 195, 72, 330, 200,67,330, 195,64, 330, 192,60, 330, 188], generation_length=1000)"
+    "generated_music = generate_music(model, primer=[16,60, 330, 188, 64, 330, 192, 67,330, 195, 72, 330, 200,67,330, 195,64, 330, 192,60, 330, 188], gen_length=1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
